--- a/css/style.css
+++ b/css/style.css
@@ -782,7 +782,7 @@ footer {
 }
 @media screen and (max-width: 576px) {
   #page-work .MV .fluid {
-    top: -38%;
+    top: -90%;
   }
 }
 
@@ -877,7 +877,7 @@ footer {
 @media screen and (max-width: 576px) {
   #page-work .main .explanation .text h3 {
     font-size: 28px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
   }
 }
 #page-work .main .explanation .text .fluid {
@@ -960,7 +960,7 @@ footer {
 }
 @media screen and (max-width: 576px) {
   #page-work .main .explanation-short .text {
-    margin-top: 40px;
+    margin-top: 30px;
   }
 }
 #page-work .main .explanation-short .work_img01 {
@@ -998,12 +998,12 @@ footer {
 }
 @media screen and (max-width: 576px) {
   #page-work .main .explanation-short .fluid {
-    top: -36%;
-    right: -26%;
-    width: 80vh;
-    height: 50vh;
-    max-width: 600px;
-    max-height: 400px;
+    bottom: -4%;
+    right: -68%;
+    width: 75vh;
+    height: 45vh;
+    max-width: 550px;
+    max-height: 350px;
   }
 }
 #page-work .main .other-img {
